Fixed font size when step count is too high to fit on one line

--- a/steps-allowed/style.css
+++ b/steps-allowed/style.css
@@ -26,6 +26,12 @@ body {
     justify-content: center;
 }
 
+div {
+    display: flex;
+    justify-content: center;
+    flex-shrink: 1;
+}
+
 /* Font formatting for headers */
 h1 {
     font-size: 50px;
